add: top span tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="wrapper">
+        <span class="speaker-view"><i class="fa-solid fa-table-cells"></i> Speaker View </span>
+        <span class="maximize"><i class="fa-solid fa-maximize"></i></span>
         <div class="container">
             <div class="row">
                 <div class="col"></div>
