--- a/index.html
+++ b/index.html
@@ -9,47 +9,85 @@
 </head>
 <body>
     <div class="wrapper">
-        <span class="speaker-view"><i class="fa-solid fa-table-cells"></i> Speaker View </span>
-        <span class="maximize"><i class="fa-solid fa-maximize"></i></span>
-        <div class="container">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+        <!-- Main -->
+        <main>
+            <span class="speaker-view"><i class="fa-solid fa-table-cells"></i> Speaker View </span>
+            <span class="maximize"><i class="fa-solid fa-maximize"></i></span>
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
             </div>
-        </div>
+        </main>
+        <!-- /Main -->
+        <!-- Footer -->
+        <footer>
+            <div class="footer-container">
+                <!-- Microfono -->
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Mute</span>
+                    </div>
+                </div>
+                <div class="angle-up">
+                <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
+                </div>
+                <!-- Microfono -->
+                <!-- Webcam -->
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-video"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Stop video</span>
+                    </div>
+                </div>
+                <div class="angle-up">
+                <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
+                </div>
+                <!-- /Webcam -->
+            </div>
+            <div class="footer-container large"></div>
+            <div class="footer-container"></div>
+        </footer>
+        <!-- /Footer -->
     </div>
 </body>
 </html>
