--- a/index.html
+++ b/index.html
@@ -84,8 +84,77 @@
                 </div>
                 <!-- /Webcam -->
             </div>
-            <div class="footer-container large"></div>
-            <div class="footer-container"></div>
+            <div class="footer-container large">
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-user-plus"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Invite</span>
+                    </div>
+                </div><div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-user-group"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Manage participants</span>
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-chart-column"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Polling</span>
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-sharp fa-solid fa-share-from-square"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Share screen</span>
+                    </div>
+                </div>
+                <div class="angle-up">
+                    <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-comment"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Chat</span>
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-record-vinyl"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Record</span>
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-table-cells-large"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>Breakout Rooms</span>
+                    </div>
+                </div>
+                <div class="action">
+                    <div class="action-icon">
+                        <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                    <div class="action-text">
+                        <span>More</span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-container meeting">
+                <span>End meeting</span>
+            </div>
         </footer>
         <!-- /Footer -->
     </div>
