add: img in col

--- a/index.html
+++ b/index.html
@@ -15,41 +15,41 @@
             <span class="maximize"><i class="fa-solid fa-maximize"></i></span>
             <div class="container">
                 <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
                 </div>
             </div>
         </main>
