refactoring: angle-up position

--- a/index.html
+++ b/index.html
@@ -15,41 +15,182 @@
             <span class="maximize"><i class="fa-solid fa-maximize"></i></span>
             <div class="container">
                 <div class="row">
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
-                    <div class="col"><img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt="">
+                    </div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
+                    <div class="col">
+                        <div>
+                            <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+                        </div>
+                        <img src="img/user-cam.jpg" alt=""></div>
                 </div>
             </div>
         </main>
@@ -64,10 +205,8 @@
                     </div>
                     <div class="action-text">
                         <span>Mute</span>
+                        <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                     </div>
-                </div>
-                <div class="angle-up">
-                <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                 </div>
                 <!-- Microfono -->
                 <!-- Webcam -->
@@ -77,10 +216,8 @@
                     </div>
                     <div class="action-text">
                         <span>Stop video</span>
+                        <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                     </div>
-                </div>
-                <div class="angle-up">
-                <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                 </div>
                 <!-- /Webcam -->
             </div>
@@ -114,10 +251,8 @@
                     </div>
                     <div class="action-text">
                         <span>Share screen</span>
+                        <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                     </div>
-                </div>
-                <div class="angle-up">
-                    <span><i class="fa-sharp fa-solid fa-angle-up"></i></span>
                 </div>
                 <div class="action">
                     <div class="action-icon">
